support for prefixes

--- a/rdfa.cfg
+++ b/rdfa.cfg
@@ -1,5 +1,7 @@
 \Preamble{xhtml} 
-\Configure{@HTML}{\Hnewline xmlns="http://www.w3.org/1999/xhtml"\Hnewline version="XHTML+RDFa 1.0"}
+\makeatletter
+\Configure{@HTML}{\rdf@xmlns\Hnewline version="XHTML+RDFa 1.0"}
+\makeatother
 \begin{document} 
 
 \EndPreamble 
