added rdfa doctype

--- a/rdfa.cfg
+++ b/rdfa.cfg
@@ -1,5 +1,9 @@
 \Preamble{xhtml} 
 \makeatletter
+\Configure{DOCTYPE}{\HCode
+{<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.1//
+EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-2.dtd">}
+}
 \Configure{@HTML}{\rdf@xmlns\Hnewline version="XHTML+RDFa 1.0"}
 \makeatother
 \begin{document} 
