--- a/rdfa.cfg
+++ b/rdfa.cfg
@@ -4,6 +4,7 @@
 {<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.1//
 EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-2.dtd">}
 }
+\def\rdf@xmlns@separator{\Hnewline}
 \Configure{@HTML}{\rdf@xmlns\Hnewline version="XHTML+RDFa 1.0"}
 \makeatother
 \begin{document} 
