now working with tex4ht

--- a/rdfa.cfg
+++ b/rdfa.cfg
@@ -1,8 +1,8 @@
 \Preamble{xhtml} 
 \makeatletter
-\Configure{DOCTYPE}{\HCode
+\Configure{DOCTYPE}{\HCode%
 {<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.1//
-EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-2.dtd">}
+EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-2.dtd">\Hnewline}%
 }
 \def\rdf@xmlns@separator{\Hnewline}
 \Configure{@HTML}{\rdf@xmlns\Hnewline version="XHTML+RDFa 1.0"}
